# sokohard

./: .gitignore  .travis.yml  BUILD  CMakeLists.txt  FileWriter.cpp  FileWriter.h  InputParser.cpp  LevelGenerator.cpp  LevelGenerator.h  Main.cpp  Makefile  Map.cpp  Map.h  MapGenerator.cpp  MapGenerator.h  Pattern.cpp  Pattern.h  README.md  State.cpp  State.h  Util.h  build_and_test.sh  pattern.txt  patterns  perf_test.sh
src/: CMakeLists.txt  filereader.cpp  filereader.h  filewriter.cpp  filewriter.h  inputparser.cpp  inputparser.h  levelgenerator.cpp  levelgenerator.h  levelsolver.cpp  levelsolver.h  main.cpp  main2.cpp  map.cpp  map.h  map_elements.h  mapgenerator.cpp  mapgenerator.h  pattern.cpp  pattern.h  patterns_list.h  position.h  positionselector.cpp  positionselector.h  solutionhandler.cpp  solutionhandler.h  state.cpp  state.h  util.cpp  util.h
testfiles/: 2x2w3changes.sok  2x2w3changes_solution.sok  2x2w3lines.sok  2x2w3lines_solution.sok  2x2w5changes.sok  2x2w5changes_solution.sok  2x2w5lines.sok  2x2w5lines_solution.sok  3x3w2changes.sok  3x3w2changes_solution.sok  3x3w2lines.sok  3x3w2lines_solution.sok
